statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: gowiki-svc-headless
  labels:
    app: gowiki
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 8080
    name: http
  selector:
    app: gowiki
---
apiVersion: v1
kind: Service
metadata:
  name: gowiki-svc
  labels:
    app: gowiki
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - port: 8080
    name: http
  selector:
    app: gowiki
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: gowiki # has to match .spec.template.metadata.labels
  serviceName: "gowiki"
  replicas: 20 # by default is 1
  template:
    metadata:
      labels:
        app: gowiki # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: gowiki
        image: nathluu/gowiki:0.0.2
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 11
        livenessProbe:
          httpGet:
            path: /livez
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        ports:
        - containerPort: 8080
          name: web
  #       volumeMounts:
  #       - name: www
  #         mountPath: /usr/share/gowiki/html
  # volumeClaimTemplates:
  # - metadata:
  #     name: www
  #   spec:
  #     accessModes: [ "ReadWriteOnce" ]
  #     storageClassName: "my-storage-class"
  #     resources:
  #       requests:
  #         storage: 1Gi
