istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gowiki-ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "gowiki.abcd.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gowiki-virtual-service
spec:
  hosts:
  - gowiki.abcd.com
  gateways:
  - gowiki-ingressgateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: gowiki-svc
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gowiki-svc-dr
spec:
  host: gowiki-svc
  trafficPolicy:
    loadBalancer:
      consistentHash:
        # httpHeaderName: X-Forwarded-For
        useSourceIp: true
  subsets:
    - labels:
        app: gowiki
      name: all-gowiki-pods
